--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
                 <div id="buttons"></div>
             </section>
             <section id="new" class="new flex">
-                <h2 class="title">Поиск</h2>
-                <input id="search" type="text" placeholder="Введите название фильма">
-                <button id="btnSearch" >Поискать фильм</button>
+                <h2 class="title">Поиск по ключевым словам</h2>
+                <div class="search-menu flex"> <input id="search" type="text" placeholder="Введите название фильма">
+                    <button id="btnSearch" class="btnSearch">Поискать фильм</button>
+                </div>
+
                 <div class="popular-films">
                     <ul id="searchFilms" class="popular-list flex">
 
